Bug 1766684 - Use compositor device for hardware video decoding only with hardware WebRender r=jrmuizel,gfx-reviewers

Do not use compositor device for decoder device when SW-WR + D3D11 is used.

When SW-WR + D3D11 is used, there is a case that RenderDXGITextureHost::MapPlane() is called. It readbacks video frame data from ID3D11Texture2D. Before doing the readback, copying video data/decoding video data needs to be completed. But we could not use keyed mutex for the ID3D11Texture2D.

To prevent the problem, SyncObjectD3D11Client::Synchronize() is called in D3D11DXVA2Manager::CopyToImage(). But the Synchronize() is called only when decoder device is not compositor device. Then when compositor device is not used for decoder device, the readback problem does not happen.

Differential Revision: https://phabricator.services.mozilla.com/D147049