gfx/thebes/DeviceManagerDx.h
@@ -61,7 +61,7 @@ class DeviceManagerDx final {
   RefPtr<ID3D11Device> GetImageDevice();
   RefPtr<IDCompositionDevice2> GetDirectCompositionDevice();
   RefPtr<ID3D11Device> GetVRDevice();
-  RefPtr<ID3D11Device> CreateDecoderDevice();
+  RefPtr<ID3D11Device> CreateDecoderDevice(bool aHardwareWebRender);
   IDirectDraw7* GetDirectDraw();
 
   unsigned GetCompositorFeatureLevel() const;
